[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/placeholder.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/placeholders/coin.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/building_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/placeholders/bank.png" type="Texture" id=8]
[ext_resource path="res://assets/placeholders/fishrod.png" type="Texture" id=9]
[ext_resource path="res://assets/placeholders/hotel.png" type="Texture" id=10]
[ext_resource path="res://assets/placeholders/pickaxe.png" type="Texture" id=11]
[ext_resource path="res://main.gd" type="Script" id=12]
[ext_resource path="res://scenes/sawmill.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/quarry.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/shipyard.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/ui.gd" type="Script" id=16]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.254902, 0.611765, 0.184314, 1 )

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.439216 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 500, 500 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0235294, 0.360784, 1, 1 )

[node name="Main" type="Node"]
script = ExtResource( 12 )

[node name="World" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, 0, 3, 5 )

[node name="Camera" type="Camera" parent="World"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 1 )
current = true
fov = 50.0

[node name="Island" type="CSGCylinder" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.987451, -6.29359 )
material_override = SubResource( 1 )
radius = 4.901

[node name="Placeholders" type="Spatial" parent="World"]
visible = false

[node name="Placeholder" parent="World/Placeholders" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.43563, 0, -4.24142 )
material = SubResource( 4 )
terrain_tags = 8

[node name="Placeholder2" parent="World/Placeholders" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.18323, -2.38419e-07, -7.9028 )
material = SubResource( 5 )
terrain_tags = 2

[node name="Placeholder3" parent="World/Placeholders" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.791966, 2.38419e-07, -8.85548 )
material = SubResource( 6 )
terrain_tags = 2

[node name="Placeholder4" parent="World/Placeholders" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.89733, 0, -5.97198 )
material = SubResource( 7 )
terrain_tags = 4

[node name="Placeholder5" parent="World/Placeholders" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.752531, 4.76837e-07, -3.31177 )
material = SubResource( 8 )
terrain_tags = 8

[node name="Buildings" type="Spatial" parent="World"]

[node name="Sea" type="CSGMesh" parent="World"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -1.48114, -0.789192, -4.17184 )
mesh = SubResource( 2 )
material = SubResource( 3 )

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 429.0
margin_top = 219.0
margin_right = 595.0
margin_bottom = 380.0
custom_constants/separation = 16

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
margin_right = 166.0
margin_bottom = 43.0
text = "Start"

[node name="OptionsButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 59.0
margin_right = 166.0
margin_bottom = 102.0
text = "Options"

[node name="AboutButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 118.0
margin_right = 166.0
margin_bottom = 161.0
text = "About"

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 16 )

[node name="StatsContainer" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -130.0
margin_top = 24.0
margin_right = -40.0
margin_bottom = 196.0

[node name="GridContainer" type="GridContainer" parent="UI/StatsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 83.0
margin_bottom = 165.0
columns = 2

[node name="CoinsTexture" type="TextureRect" parent="UI/StatsContainer/GridContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true

[node name="CoinsValue" type="Label" parent="UI/StatsContainer/GridContainer"]
margin_left = 54.0
margin_top = 6.0
margin_right = 76.0
margin_bottom = 43.0
text = "0"

[node name="BuildingContainer" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -148.0
margin_top = -104.0
margin_right = 148.0
margin_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="CancelBuildButton" type="Button" parent="UI/BuildingContainer"]
visible = false
margin_right = 296.0
margin_bottom = 43.0
text = "X"

[node name="BuildingButtons" type="PanelContainer" parent="UI/BuildingContainer"]
margin_right = 296.0
margin_bottom = 64.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/BuildingContainer/BuildingButtons"]
margin_left = 7.0
margin_top = 7.0
margin_right = 289.0
margin_bottom = 57.0
custom_constants/separation = 8

[node name="Sawmill" parent="UI/BuildingContainer/BuildingButtons/HBoxContainer" instance=ExtResource( 7 )]
building = ExtResource( 13 )

[node name="Quarry" parent="UI/BuildingContainer/BuildingButtons/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 58.0
margin_right = 108.0
texture_normal = ExtResource( 11 )
building = ExtResource( 14 )

[node name="Shipyard" parent="UI/BuildingContainer/BuildingButtons/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 116.0
margin_right = 166.0
texture_normal = ExtResource( 9 )
building = ExtResource( 15 )

[node name="Bank" parent="UI/BuildingContainer/BuildingButtons/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 174.0
margin_right = 224.0
texture_normal = ExtResource( 8 )
building = ExtResource( 13 )

[node name="Hotel" parent="UI/BuildingContainer/BuildingButtons/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 232.0
margin_right = 282.0
texture_normal = ExtResource( 10 )
building = ExtResource( 13 )
